name:                reflex-dom-helpers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/parsonsmatt/reflex-dom-helpers#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Test
  build-depends:       
      base >= 4.7 && < 5
    , reflex
    , reflex-dom
    , template-haskell
  default-language:    Haskell2010

test-suite reflex-dom-helpers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-dom-helpers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/reflex-dom-helpers
