name:                reflex-dom-helpers
version:             0.2.0.0
synopsis:            Element tag helpers for working with reflex-dom
description:         Please see README.md
homepage:            https://github.com/layer-3-communications/reflex-dom-helpers
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matthew Parsons
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Reflex.Tags
    , Reflex.Tags.Simple
    , Reflex.Tags.SimplePrime
    , Reflex.Tags.SimpleClass
    , Reflex.Tags.Attr
    , Reflex.Tags.AttrPrime
    , Reflex.Tags.DynAttr
    , Reflex.Tags.DynAttrPrime
    , Reflex.Tags.TH
  build-depends:
      base >= 4.7 && < 5
    , reflex >= 0.5 && < 0.6
    , reflex-dom >= 0.4 && < 0.5
    , template-haskell
    , text == 1.2.*
  default-language:    Haskell2010
  default-extensions:
      OverloadedStrings
      TemplateHaskell
      NoMonomorphismRestriction

test-suite reflex-dom-helpers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reflex-dom-helpers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/layer-3-communications/reflex-dom-helpers
